--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="google" content="notranslate" />
     <script
       src="https://kit.fontawesome.com/6325f4de36.js"
       crossorigin="anonymous"
